--- a/Вконтакте/style.css
+++ b/Вконтакте/style.css
@@ -58,7 +58,7 @@ header{
 	background:url('images/search.png') no-repeat #31537A;
 	background-position:7px 7px;  
 	border-radius:15px;
-	color:#C0CDDB;
+	color:#7f9ebc;
 }
 
 #search:focus{
